them binh linh ch game

--- a/j2seServer/nbproject/private/private.properties
+++ b/j2seServer/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.commons-dbcp-1.4.jar=E:\\MyProject\\TheDreamStudio\\j2seServer\\lib\\commons-dbcp-1.4.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\truongps\\.netbeans\\7.0\\build.properties
