--- a/j2seServer/nbproject/project.properties
+++ b/j2seServer/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-dbcp-1.4.jar=../ServerCore/lib/commons-dbcp-1.4.jar
+file.reference.commons-dbcp-1.4.jar-1=lib/commons-dbcp-1.4.jar
 file.reference.commons-lang-2.6.jar=lib/commons-lang-2.6.jar
 file.reference.commons-logging-1.0.3.jar=lib/commons-logging-1.0.3.jar
 file.reference.commons-pool-1.6.jar=lib/commons-pool-1.6.jar
@@ -83,7 +84,8 @@ javac.classpath=\
     ${file.reference.slf4j-jdk14-1.6.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.20-bin.jar}:\
     ${file.reference.commons-dbcp-1.4.jar}:\
-    ${file.reference.ServerCore.jar}
+    ${file.reference.ServerCore.jar}:\
+    ${file.reference.commons-dbcp-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
